# cookiecutter-base-fastapi

./: LICENSE  README.md  cookiecutter.json
docs/: cookiecutter.md
docs/hooks/: post_gen_project.md
hooks/: post_gen_project .txt  post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
{{cookiecutter.project_slug}}/.cursor/rules/: python-rules.mdc
{{cookiecutter.project_slug}}/app/: app_factory.py  main.py
{{cookiecutter.project_slug}}/app/api/: __init__.py  hero.py
{{cookiecutter.project_slug}}/app/core/: config.py  crud.py  exception_handlers.py  exceptions.py  logger.py  redis.py  response.py
{{cookiecutter.project_slug}}/app/core/database/: db_manager.py  mysql.py
{{cookiecutter.project_slug}}/app/middleware/: middleware.py  skip.py
{{cookiecutter.project_slug}}/app/models/: __init__.py  base.py  hero.py
{{cookiecutter.project_slug}}/app/templates/: response.html  welcome.html
{{cookiecutter.project_slug}}/app/tests/: README.md  conftest.py
{{cookiecutter.project_slug}}/docs/: changelog.md  logger.md
{{cookiecutter.project_slug}}/scripts/: start.sh
{{cookiecutter.project_slug}}/tests/: __init__.py  test_base.py  test_hero.py
