[project]
name = "faskapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "uvicorn==0.34.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "colorlog>=6.9.0",
    "pydantic-settings>=2.9.1",
    "fastapi[standard]>=0.115.12",
    "httpcore==1.0.7",
]


[project.optional-dependencies]
dev = [
    "black>=24.3",
    "autopep8>=2.0.0",
    "ipdb>=0.13.0",
    "pylint>=3.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
